--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bitstarter",
   "version": "0.0.1",
-  "description": "simple crowd funding site.",
+  "description": "simple crowd funding site. Barebones from heroku nodejs-sample.",
   "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
